<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mynotes.pawanjotsingh.com.mynotes.activities.InsertNoteActivity">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idToolbarInsertNote"
        android:padding="10dp"
        app:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/colorToolBar">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/contentDescription_done_imagViewButton"
            android:clickable="true"
            android:background="@null"
            android:id="@+id/idImageButtonDone"
            android:src="@mipmap/ic_done_white_48dp"
            android:layout_gravity="end"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentBottom="true" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colors"
        android:layout_margin="10dp"
        android:id="@+id/idTextViewColors"
        android:layout_above="@+id/idEditTextTitle"/>

    <CheckedTextView
        android:layout_width="28dp"
        android:layout_height="27dp"
        android:id="@+id/idCheckedTextViewRed"
        android:checkMark="@mipmap/ic_done_black_24dp"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/idTextViewColors"
        android:background="@drawable/textview_circle_red"
        android:layout_below="@id/idToolbarInsertNote"/>

    <CheckedTextView
        android:layout_width="28dp"
        android:layout_height="27dp"
        android:id="@+id/idCheckTextViewBlue"
        android:layout_margin="10dp"
        android:checkMark="@mipmap/ic_done_black_24dp"
        android:layout_toEndOf="@+id/idCheckedTextViewRed"
        android:layout_below="@+id/idToolbarInsertNote"
        android:background="@drawable/textview_circle_blue"/>

    <CheckedTextView
        android:layout_width="28dp"
        android:layout_height="27dp"
        android:id="@+id/idCheckedTextViewGreen"
        android:layout_margin="10dp"
        android:checkMark="@mipmap/ic_done_black_24dp"
        android:layout_toEndOf="@+id/idCheckTextViewBlue"
        android:layout_below="@id/idToolbarInsertNote"
        android:background="@drawable/textview_circle_green"/>

    <CheckedTextView
        android:layout_width="28dp"
        android:layout_height="27dp"
        android:id="@+id/idCheckedTextViewWhite"
        android:layout_margin="10dp"
        android:checkMark="@mipmap/ic_done_black_24dp"
        android:layout_toEndOf="@+id/idCheckedTextViewGreen"
        android:layout_below="@id/idToolbarInsertNote"
        android:background="@drawable/textview_circle_white"/>

    <CheckedTextView
        android:layout_width="28dp"
        android:layout_height="27dp"
        android:id="@+id/idCheckedTextViewYellow"
        android:layout_margin="10dp"
        android:checkMark="@mipmap/ic_done_black_24dp"
        android:layout_toEndOf="@+id/idCheckedTextViewWhite"
        android:layout_below="@id/idToolbarInsertNote"
        android:background="@drawable/textview_circle_yellow"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idCheckedTextViewRed"
        android:hint="@string/title"
        android:inputType="textShortMessage"
        android:textStyle="bold"
        android:textSize="40sp"
        android:id="@+id/idEditTextTitle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content"
        android:textSize="20sp"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:lines="10"
        android:layout_below="@id/idEditTextTitle"
        android:id="@+id/idEditTextContent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:inputType="textShortMessage"
        android:hint="@string/tag"
        android:id="@+id/idEditTextTag"
        android:textStyle="italic"/>
</RelativeLayout>
